--- a/index.html
+++ b/index.html
@@ -15,8 +15,28 @@
 		/>
 	</head>
 	<body>
-		<h1>hjhjh</h1>
-		<span class="icon-pinterest-circled"></span>
+		<section class="promo">
+			<div class="container">
+				<div class="header">
+					<div class="burger">
+						<span></span><span></span><span></span>
+					</div>
+					<a href="#" class="header__logo">
+						<img src="/src/logo/logo.png" alt="logo">
+					</a>
+					<div class="header__icons">
+						<a href="#">
+							<span class="icon-search"></span>
+						</a>
+						<a href="#">
+							<span class="icon-shopping-bag"></span>
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
 		<script type="module" src="/src/js/script.js"></script>
 	</body>
 </html>
