--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 					</a>
 				</div>
 			</div>
+			<h1 class="title-h1-italic promo__title">
+				Make your dream come true or decorate your home
+			</h1>
+			<img src="/src/img/promo/ceramic-vase.jpg" alt="promo" class="promo__img">
 		</div>
 	</section>
 
