--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 			<h1 class="title-h1-italic promo__title">
 				Make your dream come true or decorate your home
 			</h1>
-			<img src="/src/img/promo/ceramic-vase.jpg" alt="promo" class="promo__img">
+			<img src="/src/img/promo/ceramic-vase.jpg" alt="vase" class="promo__img">
+			<button class="btn-default promo__btn">shop now</button>
 		</div>
 	</section>
 
