--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="container">
 			<h2 class="title-h2">create or buy</h2>
 			<div class="pure-g activities__wrapper">
-				<div class="pure-u-1">
+				<div class="pure-u-1 pure-u-lg-2-5 activities__col">
 					<h3 class="title-h3">our store</h3>
 					<img src="/src/img/about/store.jpg" alt="store" class="activities__img">
 					<p class="activities__text">
@@ -70,7 +70,7 @@
 						our collection offers timeless pieces that bring warmth and authenticity to any space.
 					</p>
 				</div>
-				<div class="pure-u-1">
+				<div class="pure-u-1 pure-u-lg-3-5 activities__col">
 					<h3 class="title-h3">our workshop</h3>
 					<img src="/src/img/about/ceramic.jpg" alt="ceramic" class="activities__img">
 					<p class="activities__text">
