--- a/index.html
+++ b/index.html
@@ -73,11 +73,29 @@
 				<div class="pure-u-1 pure-u-lg-3-5 activities__col">
 					<h3 class="title-h3">our workshop</h3>
 					<img src="/src/img/about/ceramic.jpg" alt="ceramic" class="activities__img">
-					<p class="activities__text">
+					<p class="activities__text activities__text_fixed">
 						At <span class="activities__text_colored">Ceramic Soul</span> workshop, we don’t just craft ceramics—we invite you to get hands-on and create your own unique pieces. 
 						Through our engaging masterclasses, you’ll learn traditional techniques, work with natural materials, 
 						and experience the joy of shaping clay into something truly personal.
 					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="touch">
+		<div class="container">
+			<h2 class="title-h2">get in touch</h2>
+			<div class="touch__wrapper pure-g">
+				<div class="pure-u-1 pure-u-xl-1-2 pure-u-xxl-2-5">
+					<img src="/src/img/form/tea.jpg" alt="tea" class="touch__img">
+				</div>
+				<div class="pure-u-1 pure-u-xl-1-2 pure-u-xxl-3-5">
+					<form action="#">
+						<fieldset>
+							<input type="text">
+							<input type="text">
+						</fieldset>
+					</form>
 				</div>
 			</div>
 		</div>
