--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 									name="name" 
 									placeholder="Name">
 							</div>
-							<div class="touch_-input-block">
+							<div class="touch__input-block">
 								<label class="touch__label" for="email">Email</label>
 								<input
 									class="touch__input"
@@ -111,8 +111,12 @@
 									placeholder="Email">
 							</div>
 						</fieldset>
-						<label for="">Your question</label>
-						<textarea name="question" id="question"></textarea>
+						<label class="touch__label" for="question">Your question</label>
+						<textarea class="touch__textarea" name="question" id="question" placeholder="Question"></textarea>
+						<label class="touch__label touch__check-block" for="checkbox">
+							<input class="touch__checkbox" type="checkbox" name="checkbox" id="checkbox">
+							I agree with the <a href="#">terms</a>
+						</label>
 					</form>
 				</div>
 			</div>
