--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 									type="text" 
 									id="name" 
 									name="name" 
-									placeholder="Name">
+									placeholder="Name"
+									required>
 							</div>
 							<div class="touch__input-block">
 								<label class="touch__label" for="email">Email</label>
@@ -108,15 +109,17 @@
 									type="email" 
 									id="email" 
 									name="email" 
-									placeholder="Email">
+									placeholder="Email"
+									required>
 							</div>
 						</fieldset>
 						<label class="touch__label" for="question">Your question</label>
-						<textarea class="touch__textarea" name="question" id="question" placeholder="Question"></textarea>
+						<textarea class="touch__textarea" name="question" id="question" placeholder="Question" required></textarea>
 						<label class="touch__label touch__check-block" for="checkbox">
-							<input class="touch__checkbox" type="checkbox" name="checkbox" id="checkbox">
+							<input class="touch__checkbox" type="checkbox" name="checkbox" id="checkbox" required>
 							I agree with the <a href="#">terms</a>
 						</label>
+						<button class="btn-send touch__btn">send request</button>
 					</form>
 				</div>
 			</div>
