--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 						<button class="btn-send touch__btn">send request</button>
 					</form>
 				</div>
+				<img  class='touch__img-vase' src="/src/img/form/vase.png" alt="vase">
 			</div>
 		</div>
 	</section>
