--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Website for Ceramic soul brand" />
 	<meta name="author" content="@sergey_panteleenko" />
 	<title>Ceramic soul</title>
-	<script async type="module" src="/src/js/script.js"></script>
+	<script defer type="module" src="/src/js/script.js"></script>
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -43,16 +43,16 @@
 						<li><a href="#" class="header__link">about</a></li>
 					</ul>
 				</nav>
+			</div>
+			<div class="promo__wrapper">
+				<h1 class="title-h1-italic promo__title">
+					Make your dream come true <br> or decorate your home
+				</h1>
+				<div class="promo__cta">
+					<img src="/src/img/promo/ceramic-vase.jpg" alt="vase" class="promo__img">
+					<button class="btn-default promo__btn">shop now</button>
 				</div>
-				<div class="promo__wrapper">
-					<h1 class="title-h1-italic promo__title">
-						Make your dream come true <br> or decorate your home
-					</h1>
-					<div class="promo__cta">
-						<img src="/src/img/promo/ceramic-vase.jpg" alt="vase" class="promo__img">
-						<button class="btn-default promo__btn">shop now</button>
-					</div>
-				</div>
+			</div>
 		</div>
 	</section>
 	<section class="activities">
@@ -63,10 +63,11 @@
 					<h3 class="title-h3">our store</h3>
 					<img src="/src/img/about/store.jpg" alt="store" class="activities__img">
 					<p class="activities__text">
-						Welcome to <span class="activities__text_colored">Ceramic Soul</span>, where each piece tells a story of craftsmanship and creativity. 
-						Our handmade ceramics are thoughtfully designed and carefully crafted, 
-						blending traditional techniques with modern aesthetics. 
-						Whether you're looking for a unique gift or a special addition to your home, 
+						Welcome to <span class="activities__text_colored">Ceramic Soul</span>, where each piece tells a
+						story of craftsmanship and creativity.
+						Our handmade ceramics are thoughtfully designed and carefully crafted,
+						blending traditional techniques with modern aesthetics.
+						Whether you're looking for a unique gift or a special addition to your home,
 						our collection offers timeless pieces that bring warmth and authenticity to any space.
 					</p>
 				</div>
@@ -74,8 +75,10 @@
 					<h3 class="title-h3">our workshop</h3>
 					<img src="/src/img/about/ceramic.jpg" alt="ceramic" class="activities__img">
 					<p class="activities__text activities__text_fixed">
-						At <span class="activities__text_colored">Ceramic Soul</span> workshop, we don’t just craft ceramics—we invite you to get hands-on and create your own unique pieces. 
-						Through our engaging masterclasses, you’ll learn traditional techniques, work with natural materials, 
+						At <span class="activities__text_colored">Ceramic Soul</span> workshop, we don’t just craft
+						ceramics—we invite you to get hands-on and create your own unique pieces.
+						Through our engaging masterclasses, you’ll learn traditional techniques, work with natural
+						materials,
 						and experience the joy of shaping clay into something truly personal.
 					</p>
 				</div>
@@ -94,27 +97,18 @@
 						<fieldset class="touch__fieldset">
 							<div class="touch__input-block">
 								<label class="touch__label" for="name">Name</label>
-								<input 
-									class="touch__input"
-									type="text" 
-									id="name" 
-									name="name" 
-									placeholder="Name"
+								<input class="touch__input" type="text" id="name" name="name" placeholder="Name"
 									required>
 							</div>
 							<div class="touch__input-block">
 								<label class="touch__label" for="email">Email</label>
-								<input
-									class="touch__input"
-									type="email" 
-									id="email" 
-									name="email" 
-									placeholder="Email"
+								<input class="touch__input" type="email" id="email" name="email" placeholder="Email"
 									required>
 							</div>
 						</fieldset>
 						<label class="touch__label" for="question">Your question</label>
-						<textarea class="touch__textarea" name="question" id="question" placeholder="Question" required></textarea>
+						<textarea class="touch__textarea" name="question" id="question" placeholder="Question"
+							required></textarea>
 						<label class="touch__label touch__check-block" for="checkbox">
 							<input class="touch__checkbox" type="checkbox" name="checkbox" id="checkbox" required>
 							I agree with the <a href="#">terms</a>
@@ -122,8 +116,30 @@
 						<button class="btn-send touch__btn">send request</button>
 					</form>
 				</div>
-				<img  class='touch__img-vase' src="/src/img/form/vase.png" alt="vase">
+				<img class='touch__img-vase' src="/src/img/form/vase.png" alt="vase">
 			</div>
+		</div>
+	</section>
+	<section class="works">
+		<h2 class="title-h2">check out our works</h2>
+		<div class="swiper">
+			<!-- Additional required wrapper -->
+			<div class="swiper-wrapper">
+				<!-- Slides -->
+				<div class="swiper-slide">Slide 1</div>
+				<div class="swiper-slide">Slide 2</div>
+				<div class="swiper-slide">Slide 3</div>
+				...
+			</div>
+			<!-- If we need pagination -->
+			<div class="swiper-pagination"></div>
+
+			<!-- If we need navigation buttons -->
+			<div class="swiper-button-prev"></div>
+			<div class="swiper-button-next"></div>
+
+			<!-- If we need scrollbar -->
+			<div class="swiper-scrollbar"></div>
 		</div>
 	</section>
 </body>
