--- a/index.html
+++ b/index.html
@@ -121,25 +121,27 @@
 		</div>
 	</section>
 	<section class="works">
-		<h2 class="title-h2">check out our works</h2>
-		<div class="swiper">
-			<!-- Additional required wrapper -->
-			<div class="swiper-wrapper">
-				<!-- Slides -->
-				<div class="swiper-slide">Slide 1</div>
-				<div class="swiper-slide">Slide 2</div>
-				<div class="swiper-slide">Slide 3</div>
-				...
+		<div class="container">
+			<h2 class="title-h2">check out our works</h2>
+			<div class="swiper works__slider">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<img src="/src/img/works/tea-1.jpg" alt="tea-1" class="works__slider-slide">
+					</div>
+					<div class="swiper-slide">
+						<img src="/src/img/works/tea-2.jpg" alt="tea-2" class="works__slider-slide">
+					</div>
+					<div class="swiper-slide">
+						<img src="/src/img/works/tea-3.jpg" alt="tea-3" class="works__slider-slide">
+					</div>
+					<div class="swiper-slide">
+						<img src="/src/img/works/tea-2.jpg" alt="tea-4" class="works__slider-slide">
+					</div>
+				</div>
+				<div class="swiper-pagination"></div>
+				<div class="swiper-button-prev"></div>
+				<div class="swiper-button-next"></div>
 			</div>
-			<!-- If we need pagination -->
-			<div class="swiper-pagination"></div>
-
-			<!-- If we need navigation buttons -->
-			<div class="swiper-button-prev"></div>
-			<div class="swiper-button-next"></div>
-
-			<!-- If we need scrollbar -->
-			<div class="swiper-scrollbar"></div>
 		</div>
 	</section>
 </body>
