--- a/index.html
+++ b/index.html
@@ -123,24 +123,26 @@
 	<section class="works">
 		<div class="container">
 			<h2 class="title-h2">check out our works</h2>
-			<div class="swiper works__slider">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-						<img src="/src/img/works/tea-1.jpg" alt="tea-1" class="works__slider-slide">
-					</div>
-					<div class="swiper-slide">
-						<img src="/src/img/works/tea-2.jpg" alt="tea-2" class="works__slider-slide">
-					</div>
-					<div class="swiper-slide">
-						<img src="/src/img/works/tea-3.jpg" alt="tea-3" class="works__slider-slide">
-					</div>
-					<div class="swiper-slide">
-						<img src="/src/img/works/tea-2.jpg" alt="tea-4" class="works__slider-slide">
+			<div class="works__wrapper">
+				<div class="swiper works__slider">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img src="/src/img/works/tea-1.jpg" alt="tea-1" class="works__slider-slide">
+						</div>
+						<div class="swiper-slide">
+							<img src="/src/img/works/tea-2.jpg" alt="tea-2" class="works__slider-slide">
+						</div>
+						<div class="swiper-slide">
+							<img src="/src/img/works/tea-3.jpg" alt="tea-3" class="works__slider-slide">
+						</div>
+						<div class="swiper-slide">
+							<img src="/src/img/works/tea-2.jpg" alt="tea-4" class="works__slider-slide">
+						</div>
 					</div>
 				</div>
 				<div class="swiper-pagination"></div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
+				<button class="icon-left-open works__slider-nav"></button>
+				<button class="icon-right-open works__slider-nav"></button>
 			</div>
 		</div>
 	</section>
