--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -58,7 +58,7 @@
             </div>
             <h1 class="title-h2 catalog__title">our pottery</h1>
             <div class="catalog__tabs">
-                <button class="catalog__tab">for tea</button>
+                <button class="catalog__tab catalog__tab_active">for tea</button>
                 <button class="catalog__tab">for kitchen</button>
                 <button class="catalog__tab">for plants</button>
             </div>
