--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -62,6 +62,12 @@
                 <button class="catalog__tab">for kitchen</button>
                 <button class="catalog__tab">for plants</button>
             </div>
+
+            <div class="catalog__content">
+                <div class="catalog__content-item">1</div>
+                <div class="catalog__content-item">2</div>
+                <div class="catalog__content-item">3</div>
+            </div>
         </div>
 
 
