--- a/pages/blog.html
+++ b/pages/blog.html
@@ -16,7 +16,137 @@
 </head>
 
 <body>
+    <section class="blog">
+        <div class="container">
+            <div class="header">
+                <div class="header__menu">
+                    <div class="header__menu-close">
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <nav class="header__menu-nav">
+                        <ul>
+                            <li><a href="#" class="header__menu-link">catalog</a></li>
+                            <li><a href="#" class="header__menu-link">blog</a></li>
+                            <li><a href="#" class="header__menu-link">about</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="header__top">
+                    <div class="burger">
+                        <span></span><span></span><span></span>
+                    </div>
+                    <a href="#" class="header__logo">
+                        <img src="/src/logo/logo.png" alt="logo">
+                    </a>
+                    <div class="header__icons">
+                        <a href="#">
+                            <span class="icon-search"></span>
+                        </a>
+                        <a href="#">
+                            <span class="icon-shopping-bag"></span>
+                        </a>
+                    </div>
+                </div>
+                <nav class="header__nav">
+                    <ul>
+                        <li><a href="#" class="header__link">catalog</a></li>
+                        <li><a href="#" class="header__link">blog</a></li>
+                        <li><a href="#" class="header__link">about</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <h1 class="title-h2 catalog__title">our digital notes</h1>
+            <div class="blog__wrapper">
+                <div class="blog__card">
+                    <div class="blog__data pure-g">
+                        <div class="pure-u-1 pure-u-md-2">
+                            <img src="/src/img/form/tea.jpg" alt="tea">
+                        </div>
+                        <div class="pure-u-1 pure-u-md-2"></div>
 
+                    </div>
+                    <div class="blog__text">Discover the timeless art of pottery and unlock the secrets hidden in every
+                        curve and glaze. From mastering the perfect
+                        wheel technique to understanding how clay transforms in the kiln, each step reveals a blend of
+                        tradition and creativity.
+                        The true magic lies in the details—subtle textures, natural imperfections, and the unique touch
+                        of the artisan’s hand,
+                        turning simple earth into lasting beauty.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer footer_spaced">
+        <div class="container">
+            <div class="footer__wrapper">
+                <div class="footer__newsletter">
+                    <h2 class="footer__header">newsletter</h2>
+                    <div class="footer__text footer__text_spaced">
+                        Keep up to date with news and promotions
+                    </div>
+                    <form action="#" class="footer__form">
+                        <input placeholder="Enter your e-mail" type="email" class="footer__input" required />
+                        <label class="footer__check-block" for="footer__checkbox">
+                            <input required class="footer__checkbox" type="checkbox" id="footer__checkbox" />
+                            I agree with the <a href="#">terms</a></label>
+                        <button class="btn-submit footer__form-btn ">submit</button>
+                    </form>
+                </div>
+                <div class="footer__links">
+                    <div class="footer__links-block">
+                        <h2 class="footer__header">discover</h2>
+                        <nav class="footer__nav">
+                            <ul>
+                                <li class="footer__link"><a href="#">About Us</a></li>
+                                <li class="footer__link"><a href="#">Blog</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__links-block">
+                        <h2 class="footer__header">shopping</h2>
+                        <nav class="footer__nav">
+                            <ul>
+                                <li class="footer__link"><a href="#">Catalog</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__links-block">
+                        <h2 class="footer__header">information</h2>
+                        <nav class="footer__nav">
+                            <ul>
+                                <li class="footer__link">
+                                    <a href="#">Terms and Conditions</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="footer__social">
+                    <h2 class="footer__header">follow us</h2>
+                    <ul class="footer__social-block">
+                        <li>
+                            <a href="https://www.facebook.com/">
+                                <span class="icon-facebook"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/">
+                                <span class="icon-instagram"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.pinterest.com/">
+                                <span class="icon-pinterest-circled"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__copyright">© Copyright 2025, Ceramic soul</div>
+        </div>
+    </footer>
 </body>
 
 </html>
