--- a/pages/blog.html
+++ b/pages/blog.html
@@ -63,7 +63,9 @@
                         <div class="pure-u-1 pure-u-md-2">
                             <img src="/src/img/form/tea.jpg" alt="tea">
                         </div>
-                        <div class="pure-u-1 pure-u-md-2"></div>
+                        <div class="pure-u-1 pure-u-md-2 blog__data-column">
+                            <h3 class="title-h3">pottery secrets</h3>
+                        </div>
 
                     </div>
                     <div class="blog__text">Discover the timeless art of pottery and unlock the secrets hidden in every
