--- a/pages/blog.html
+++ b/pages/blog.html
@@ -65,6 +65,7 @@
                         </div>
                         <div class="pure-u-1 pure-u-md-2 blog__data-column">
                             <h3 class="title-h3">pottery secrets</h3>
+                            button
                         </div>
 
                     </div>
