--- a/pages/blog.html
+++ b/pages/blog.html
@@ -56,16 +56,53 @@
                     </ul>
                 </nav>
             </div>
-            <h1 class="title-h2 catalog__title">our digital notes</h1>
+            <h1 class="title-h2 blog__title">our digital notes</h1>
             <div class="blog__wrapper">
                 <div class="blog__card">
                     <div class="blog__data pure-g">
-                        <div class="pure-u-1 pure-u-md-2">
-                            <img src="/src/img/form/tea.jpg" alt="tea">
+                        <div class="pure-u-1 pure-u-md-1-2">
+                            <img class="blog__img " src="/src/img/form/tea.jpg" alt="tea">
                         </div>
-                        <div class="pure-u-1 pure-u-md-2 blog__data-column">
-                            <h3 class="title-h3">pottery secrets</h3>
-                            button
+                        <div class="blog__data-column pure-u-1 pure-u-md-1-2">
+                            <h3 class="title-h3 blog__title-h3">pottery secrets</h3>
+                            <button class="btn-read">read</button>
+                        </div>
+
+                    </div>
+                    <div class="blog__text">Discover the timeless art of pottery and unlock the secrets hidden in every
+                        curve and glaze. From mastering the perfect
+                        wheel technique to understanding how clay transforms in the kiln, each step reveals a blend of
+                        tradition and creativity.
+                        The true magic lies in the details—subtle textures, natural imperfections, and the unique touch
+                        of the artisan’s hand,
+                        turning simple earth into lasting beauty.</div>
+                </div>
+                <div class="blog__card">
+                    <div class="blog__data pure-g">
+                        <div class="pure-u-1 pure-u-md-1-2">
+                            <img class="blog__img " src="/src/img/works/tea-2.jpg" alt="tea">
+                        </div>
+                        <div class="blog__data-column pure-u-1 pure-u-md-1-2">
+                            <h3 class="title-h3 blog__title-h3">the best materials for pottery</h3>
+                            <button class="btn-read">read</button>
+                        </div>
+
+                    </div>
+                    <div class="blog__text">The best material for pottery often depends on the desired look and
+                        function, but stoneware is a favorite for its
+                        durability and versatility. It’s strong, resistant to chipping, and perfect for both functional
+                        pieces like mugs and
+                        plates, as well as decorative art. Porcelain offers a delicate, refined finish, ideal for
+                        intricate designs.</div>
+                </div>
+                <div class="blog__card">
+                    <div class="blog__data pure-g">
+                        <div class="pure-u-1 pure-u-md-1-2">
+                            <img class="blog__img " src="/src/img/form/tea.jpg" alt="tea">
+                        </div>
+                        <div class="blog__data-column pure-u-1 pure-u-md-1-2">
+                            <h3 class="title-h3 blog__title-h3">pottery secrets</h3>
+                            <button class="btn-read">read</button>
                         </div>
 
                     </div>
@@ -94,7 +131,7 @@
                         <label class="footer__check-block" for="footer__checkbox">
                             <input required class="footer__checkbox" type="checkbox" id="footer__checkbox" />
                             I agree with the <a href="#">terms</a></label>
-                        <button class="btn-submit footer__form-btn ">submit</button>
+                        <button class="btn-submit  footer__form-btn ">submit</button>
                     </form>
                 </div>
                 <div class="footer__links">
