--- a/pages/about.html
+++ b/pages/about.html
@@ -96,7 +96,7 @@
                     <img class="touch__img" src="/src/img/form/tea.jpg" alt="tea" />
                 </div>
                 <div class="pure-u-1 pure-u-xl-1-2 pure-u-xxl-3-5">
-                    <form class="touch__form" action="#">
+                    <form class="touch__form" id="form" action="#">
                         <fieldset class="touch__fieldset">
                             <div class="touch__input-block">
                                 <label class="touch__label" for="name">Name</label>
@@ -113,9 +113,13 @@
                         <textarea class="touch__textarea" name="question" id="question" placeholder="Question"
                             required></textarea>
 
+                        <div class="error-message"></div>
+
                         <label class="touch__label touch__check-block" for="checkbox">
                             <input required class="touch__checkbox" type="checkbox" id="checkbox" />
                             I agree with the <a href="#">terms</a></label>
+
+                        <div class="checkbox-error-message"></div>
 
                         <button class="btn-send touch__btn">send request</button>
                     </form>
