--- a/index.html
+++ b/index.html
@@ -175,9 +175,12 @@
 					</div>
 					<form action="#" class="footer__form">
 						<input placeholder="Enter your e-mail" type="email" class="footer__input" required />
+						<div class="error-message"></div>
+						<div class="checkbox-error-message"></div>
 						<label class="footer__check-block" for="footer__checkbox">
 							<input required class="footer__checkbox" type="checkbox" id="footer__checkbox" />
-							I agree with the <a href="#">terms</a></label>
+							I agree with the <a href="#">terms</a>
+						</label>
 						<button class="btn-submit footer__form-btn ">submit</button>
 					</form>
 				</div>
