--- a/pages/about.html
+++ b/pages/about.html
@@ -96,7 +96,7 @@
                     <img class="touch__img" src="/src/img/form/tea.jpg" alt="tea" />
                 </div>
                 <div class="pure-u-1 pure-u-xl-1-2 pure-u-xxl-3-5">
-                    <form class="touch__form" id="form" action="#">
+                    <form action="#">
                         <fieldset class="touch__fieldset">
                             <div class="touch__input-block">
                                 <label class="touch__label" for="name">Name</label>
