--- a/index.html
+++ b/index.html
@@ -174,11 +174,13 @@
 						Keep up to date with news and promotions
 					</div>
 					<form action="#" class="footer__form">
-						<input placeholder="Enter your e-mail" type="email" class="footer__input" required />
+						<input placeholder="Enter your e-mail" name="email" type="email" class="footer__input"
+							required />
 						<div class="error-message"></div>
 						<div class="checkbox-error-message"></div>
 						<label class="footer__check-block" for="footer__checkbox">
-							<input required class="footer__checkbox" type="checkbox" id="footer__checkbox" />
+							<input required class="footer__checkbox" name="checkbox" type="checkbox"
+								id="footer__checkbox" />
 							I agree with the <a href="#">terms</a>
 						</label>
 						<button class="btn-submit footer__form-btn ">submit</button>
