--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 	<section class="promo">
-		<img src="/src/img/promo/potter.jpg" alt="potter" class="promo__potter">
+		<img src="/src/img/promo/potter.jpg" alt="potter" class="promo__potter ">
 		<div class="container">
 			<div class="header">
 				<div class="header__menu">
@@ -37,7 +37,7 @@
 					<div class="burger">
 						<span></span><span></span><span></span>
 					</div>
-					<a href="#" class="header__logo">
+					<a href="#" class="header__logo animate__animated animate__bounce ">
 						<img src="/src/logo/logo.png" alt="logo">
 					</a>
 					<div class="header__icons">
@@ -51,9 +51,9 @@
 				</div>
 				<nav class="header__nav">
 					<ul>
-						<li><a href="#" class="header__link">catalog</a></li>
-						<li><a href="#" class="header__link">blog</a></li>
-						<li><a href="#" class="header__link">about</a></li>
+						<li><a href="/pages/catalog" class="header__link">catalog</a></li>
+						<li><a href="/pages/blog" class="header__link">blog</a></li>
+						<li><a href="/pages/about" class="header__link">about</a></li>
 					</ul>
 				</nav>
 			</div>
